# AMULGENT

./: .pre-commit-config.yaml  CHANGELOG.md  FAQ.md  PRE_COMMIT_INSTALLATION.md  QUICKSTART.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: auto-format.yml  coverage.yml  documentation.yml  lint.yml  security.yml  test.yml
AIMULGENT/: Dockerfile  HRM_ENHANCEMENTS.md  LICENSE  README.md  __init__.py  demo_hrm.py  demo_workflow_visualization.py  docker-compose.yml  pyproject.toml  requirements.txt  requirements_minimal.txt
AIMULGENT/aimulgent/: __init__.py  __version__.py  main.py
AIMULGENT/aimulgent/agents/: __init__.py  analysis.py  base.py  hrm_reasoning.py
AIMULGENT/aimulgent/core/: __init__.py  config.py  coordinator.py  health.py  metrics.py  system.py
AIMULGENT/aimulgent/magic/: __init__.py  interface.py
AIMULGENT/config/: default_config.json
AIMULGENT/core/: __init__.py  observer_coordinator.py
AIMULGENT/sdk/nodejs/: README.md
AIMULGENT/sdk/python/: README.md
AIMULGENT/tests/: test_hrm_reasoning.py
docs/: mkdocs.yml
docs/api/: index.md
