[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aimulgent"
version = "1.0.0"
description = "AI Multiple Agents for Coding - Advanced multi-agent system"
readme = "README.md"
license = "MIT"
authors = [
    {name = "AI Research Team", email = "research@aimulgent.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.25.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "plotly>=5.12.0",
    "networkx>=3.0",
    "asyncio-mqtt>=0.16.0",
    "sentence-transformers>=2.2.0",
    "opencv-python>=4.7.0",
    "graphviz>=0.20.0",
    "faiss-cpu>=1.7.3",
    "pydantic>=2.0.0",
    "fastapi>=0.89.0",
    "uvicorn>=0.20.0",
    "sqlalchemy>=1.4.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ipdb>=0.13.0",
]
gpu = [
    "torch[gpu]>=2.0.0",
    "faiss-gpu>=1.7.3",
]

[project.urls]
Homepage = "https://github.com/aimulgent/aimulgent"
Repository = "https://github.com/aimulgent/aimulgent"
Documentation = "https://docs.aimulgent.ai"

[project.scripts]
aimulgent = "aimulgent.main:main"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by line-length
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["aimulgent"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80